# aoc

./: .gitignore  Cargo.toml  aoc24.py  aoc25.py  input24_analisis.txt
2015/doesnt-he-have-intern-elves-for-this/: Cargo.toml  README.md
2015/doesnt-he-have-intern-elves-for-this/src/: main.rs
2015/i-was-told-there-would-be-no-math/: Cargo.toml
2015/i-was-told-there-would-be-no-math/src/: main.rs
2015/not-quite-lisp/: Cargo.toml
2015/not-quite-lisp/src/: main.rs
2015/perfectly-spherical-houses-in-a-vacuum/: Cargo.toml
2015/perfectly-spherical-houses-in-a-vacuum/src/: main.rs
2015/problably-a-fire-hazard/: Cargo.toml  README.md
2015/problably-a-fire-hazard/src/: main.rs
2015/some-assembly-required/: Cargo.toml  README.md
2015/some-assembly-required/src/: expression.rs  main.rs  solver.rs  statement.rs
2015/the-ideal-stocking-stuffer/: Cargo.toml  README.md  RFC1321.txt
2022/01/src/: main.rs
2022/04/: Cargo.toml
2022/10/: Cargo.toml
2022/11/: Cargo.toml
2022/15/: Cargo.toml
2022/16/: Cargo.toml  README.md
2022/17/: Cargo.toml  README.md
2022/18/: Cargo.toml  README.md
2022/19/: Cargo.toml  README.md
2022/20/: Cargo.toml  README.md
2022/21/: Cargo.toml  README.md
2022/22/: Cargo.toml  README.md
2022/24/: Cargo.toml
2022/25/: Cargo.toml
2023/a-long-walk/: Cargo.toml  README.md
2023/aplenty/: Cargo.toml
2023/camel-cards/: Cargo.toml  README.md
2023/clumsy-crucible/: Cargo.toml
2023/cosmic-expansion/: Cargo.toml
2023/cube-conundrum/: Cargo.toml
2023/gear-ratios/: Cargo.toml
2023/haunted-wasteland/: Cargo.toml  README.md
2023/hot-springs/: Cargo.toml
2023/if-you-give-a-seed-a-fertilizer/: Cargo.toml
2023/lavaduct-lagoon/: Cargo.toml
2023/lens-library/: Cargo.toml
2023/mirage-maintenance/: Cargo.toml
2023/never-tell-me-the-odds/: Cargo.toml  README.md
2023/parabolic-reflector-dish/: Cargo.toml
2023/pipe-maze/: Cargo.toml
2023/point-of-incidence/: Cargo.toml
2023/pulse-propagation/: Cargo.toml
2023/sand-slabs/: Cargo.toml  README.md
2023/scratchcards/: Cargo.toml
2023/snowverload/: Cargo.toml
2023/step-counter/: Cargo.toml
2023/the-floor-will-be-lava/: Cargo.toml  out.txt
2023/trebuchet/: Cargo.toml
2023/wait-for-it/: Cargo.toml  README.md
aoc/src/: gcd.rs  lcm.rs  lib.rs
(+132 files in other folders)
