[workspace]

resolver = "2"
members = [
    "aoc",
    "2015/not-quite-lisp",
    "2015/i-was-told-there-would-be-no-math",
    "2015/perfectly-spherical-houses-in-a-vacuum",
    "2015/the-ideal-stocking-stuffer",
    "2015/doesnt-he-have-intern-elves-for-this",
    "2015/problably-a-fire-hazard",
    "2015/some-assembly-required",
    "2023/trebuchet",
    "2023/cube-conundrum",
    "2023/gear-ratios",
    "2023/scratchcards",
]


[workspace.dependencies]

aoc = { path = "aoc" }
