[workspace]

resolver = "2"
members = [
  "aoc",
  "2015/not-quite-lisp",
  "2015/i-was-told-there-would-be-no-math",
  "2015/perfectly-spherical-houses-in-a-vacuum",
  "2015/the-ideal-stocking-stuffer",
  "2015/doesnt-he-have-intern-elves-for-this",
  "2015/problably-a-fire-hazard",
  "2015/some-assembly-required",
  "2023/trebuchet",
  "2023/cube-conundrum",
  "2023/gear-ratios",
  "2023/scratchcards",
  "2023/if-you-give-a-seed-a-fertilizer",
  "2023/wait-for-it",
  "2023/camel-cards",
  "2023/haunted-wasteland",
  "2023/mirage-maintenance",
  "2023/pipe-maze",
  "2023/cosmic-expansion",
  "2023/hot-springs",
  "2023/point-of-incidence",
  "2023/parabolic-reflector-dish",
  "2023/lens-library",
  "2023/the-floor-will-be-lava",
  "2023/clumsy-crucible",
  "2023/lavaduct-lagoon",
  "2023/aplenty",
  "2023/pulse-propagation",
  "2023/step-counter",
  "2023/sand-slabs",
  "2023/a-long-walk",
  "2023/never-tell-me-the-odds",
  "2023/snowverload",
]


[workspace.dependencies]
aoc = { path = "aoc" }
